Final before demo - Launch screen addition and UI work

--- a/CelebrityStalker/Base.lproj/LaunchScreen.storyboard
+++ b/CelebrityStalker/Base.lproj/LaunchScreen.storyboard
@@ -2,12 +2,13 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Celebrity Stalker-->
         <scene sceneID="EHf-IW-A2E">
             <objects>
-                <viewController title="Celebrity Stalker" id="01J-lp-oVM" customClass="SplashViewController" customModule="CelebrityStalker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Celebrity Stalker" id="01J-lp-oVM" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Llm-lL-Icb"/>
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
@@ -15,8 +16,35 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iTunesArtwork" translatesAutoresizingMaskIntoConstraints="NO" id="HT6-gN-zIf">
+                                <rect key="frame" x="44" y="68" width="512" height="512"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="512" id="KYM-ex-CEP"/>
+                                    <constraint firstAttribute="width" constant="512" id="PYB-4W-J5D"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paparazzi!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mjl-xj-hc7">
+                                <rect key="frame" x="20" y="-5" width="338" height="183"/>
+                                <fontDescription key="fontDescription" name="Zapfino" family="Zapfino" pointSize="54"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Icon Images provided by: icons8" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e5L-X5-Tcf">
+                                <rect key="frame" x="95" y="133" width="233" height="19"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="HT6-gN-zIf" secondAttribute="bottom" constant="20" id="6tU-yR-K6m"/>
+                            <constraint firstItem="e5L-X5-Tcf" firstAttribute="leading" secondItem="Mjl-xj-hc7" secondAttribute="trailing" constant="-263" id="7eU-jH-eIx"/>
+                            <constraint firstItem="Mjl-xj-hc7" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" constant="-5" id="fJG-du-ByZ"/>
+                            <constraint firstItem="Mjl-xj-hc7" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="jHa-X2-laf"/>
+                            <constraint firstItem="HT6-gN-zIf" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="mQP-fY-6X6"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +52,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="iTunesArtwork" width="512" height="512"/>
+    </resources>
 </document>
